# autofiles

./: CHANGELOG.md  Makefile  pyproject.toml  ruff.toml
auto/: __init__.py  file_extension.py  main.py  test_utils.py  utils.py
autofiles/: __main__.py  main.py  test_utils.py
