[tool.poetry]
name = "autofiles"
version = "0.1.2"
description = ""
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pykit = { path = "../pykit", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
coverage = "^7.3.3"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[tool.poetry.scripts]
autofiles = "autofiles.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
